<resources>
    <string name="app_name">Calculator</string>
    <string name="posnev">+/-</string>
    <string name="cancel">CE</string>
    <string name="div">/</string>
    <string name="perc">%</string>
    <string name="sev">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="mult">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subt">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="Three">3</string>
    <string name="c">C</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="three">3</string>
</resources>