<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginTop="60dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="100dp">

        <ImageView
            android:layout_marginStart="20dp"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvResult"
            android:textStyle="bold"
            android:textSize="42sp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tvFormula"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>


  <LinearLayout
      android:layout_margin="5dp"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:weightSum="5">
      <LinearLayout
          android:layout_weight="1"
          android:weightSum="4"
          android:layout_width="match_parent"
          android:layout_height="80dp"
          android:orientation="horizontal">

          <Button
              android:layout_margin="2dp"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:id="@+id/btnCE"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/cancel"
              android:textSize="28sp"
              android:textStyle="bold"/>

          <Button
              android:layout_margin="2dp"
              android:gravity="center"
              android:id="@+id/btnC"
              android:layout_gravity="center_vertical"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/c"
              android:textSize="28sp"
              android:textStyle="bold"/>
          <Button
              android:layout_margin="2dp"
              android:id="@+id/btnPN"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/posnev"
              android:textSize="28sp"
              android:textStyle="bold"/>

          <Button
              android:onClick="addOperand"
              android:layout_margin="2dp"
              android:id="@+id/btnPerc"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/perc"
              android:textSize="28sp"
              android:textStyle="bold"/>

      </LinearLayout>
      <LinearLayout
          android:layout_weight="1"
          android:weightSum="4"
          android:layout_width="match_parent"
          android:layout_height="80dp"
          android:orientation="horizontal">

          <Button
              android:onClick="addDigit"
              android:layout_margin="2dp"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:id="@+id/btnSev"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/sev"
              android:textSize="28sp"
              android:textStyle="bold"/>

          <Button
              android:onClick="addDigit"
              android:layout_margin="2dp"
              android:id="@+id/btnEight"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/eight"
              android:textSize="28sp"
              android:textStyle="bold"/>

          <Button
              android:onClick="addDigit"
              android:layout_margin="2dp"
              android:id="@+id/btnNine"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/nine"
              android:textSize="28sp"
              android:textStyle="bold"/>

          <Button
              android:onClick="addOperand"
              android:layout_margin="2dp"
              android:id="@+id/btnDiv"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/div"
              android:textSize="28sp"
              android:textStyle="bold"/>

      </LinearLayout>
      <LinearLayout
          android:layout_weight="1"
          android:weightSum="4"
          android:layout_width="match_parent"
          android:layout_height="80dp"
          android:orientation="horizontal">

          <Button
              android:onClick="addDigit"
              android:layout_margin="2dp"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:id="@+id/btnFour"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/four"
              android:textSize="28sp"
              android:textStyle="bold"/>

          <Button
              android:onClick="addDigit"
              android:layout_margin="2dp"
              android:id="@+id/btnFive"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/five"
              android:textSize="28sp"
              android:textStyle="bold"/>

          <Button
              android:onClick="addDigit"
              android:layout_margin="2dp"
              android:id="@+id/btnSix"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/six"
              android:textSize="28sp"
              android:textStyle="bold"/>

          <Button
              android:onClick="addOperand"
              android:layout_margin="2dp"
              android:id="@+id/btnMult"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/mult"
              android:textSize="28sp"
              android:textStyle="bold"/>

      </LinearLayout>
      <LinearLayout
          android:layout_margin="2dp"
          android:layout_weight="1"
          android:weightSum="4"
          android:layout_width="match_parent"
          android:layout_height="80dp"
          android:orientation="horizontal">

          <Button
              android:onClick="addDigit"
              android:layout_margin="2dp"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:id="@+id/btnOne"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/one"
              android:textSize="28sp"
              android:textStyle="bold"/>

          <Button
              android:onClick="addDigit"
              android:layout_margin="2dp"
              android:id="@+id/btnTwo"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/two"
              android:textSize="28sp"
              android:textStyle="bold"/>
          <Button
              android:onClick="addDigit"
              android:layout_margin="2dp"
              android:id="@+id/btnThree"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/three"
              android:textSize="28sp"
              android:textStyle="bold"/>

          <Button
              android:onClick="addOperand"
              android:layout_margin="2dp"
              android:id="@+id/btnSubt"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/subt"
              android:textSize="28sp"
              android:textStyle="bold"/>

      </LinearLayout>
      <LinearLayout
          android:layout_weight="1"
          android:weightSum="4"
          android:layout_width="match_parent"
          android:layout_height="80dp"
          android:orientation="horizontal">

          <Button
              android:onClick="addDigit"
              android:layout_margin="2dp"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:id="@+id/btnZero"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/zero"
              android:textSize="28sp"
              android:textStyle="bold"/>

          <Button

              android:layout_margin="2dp"
              android:id="@+id/btnDot"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/dot"
              android:textSize="28sp"
              android:textStyle="bold"/>
          <Button
              android:layout_margin="2dp"
              android:id="@+id/btnEqual"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/equal"
              android:textSize="28sp"
              android:textStyle="bold"/>

          <Button
              android:onClick="addOperand"
              android:layout_margin="2dp"
              android:id="@+id/btnPlus"
              android:gravity="center"
              android:layout_gravity="center_vertical"
              android:layout_weight="1"
              android:layout_width="50dp"
              android:layout_height="match_parent"
              android:text="@string/plus"
              android:textSize="28sp"
              android:textStyle="bold"/>

      </LinearLayout>

  </LinearLayout>


</LinearLayout>